# theourgia

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE_CONTINUATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile.example  FEATURES.md  NOTICE  PROJECT_PLAN.md  README.md  SECURITY.md  biome.json  docker-compose.dev-theourgia.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  justfile  note_to_design_claude.md  notefortheourgiaclaude.md  package.json  playwright.a11y.config.ts  playwright.config.ts  playwright.visual.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
agent-daemon/: Dockerfile  README.md  alembic.ini  pyproject.toml
agent-daemon/alembic/: env.py  script.py.mako
agent-daemon/alembic/versions/: 0001_initial_schema.py  0002_audit_event.py  0003_agent_run_run_key.py
agent-daemon/systemd/: theourgia-agent-daemon.service
agent-daemon/tests/: conftest.py  test_api_costs.py  test_api_installs.py  test_api_mcp.py  test_api_memory.py  test_api_runs.py  test_audit.py  test_audit_integration.py  test_capabilities.py  test_cost_accumulator.py  test_cost_cap.py  test_crypto.py  test_db_audit_sink.py  test_definitions.py  test_dispatch.py  test_filters.py  test_gating.py  test_launcher.py  test_persistence.py  test_protocol.py  test_repos.py  test_sandbox.py  test_sessions.py  test_subprocess_runner.py  test_vault_client.py
agent-daemon/theourgia_agent/: __about__.py  __init__.py
agent-daemon/theourgia_agent/agents/: __init__.py  definitions.py
agent-daemon/theourgia_agent/api/: __init__.py  app.py
agent-daemon/theourgia_agent/api/routers/: __init__.py  audit.py  costs.py  installs.py  mcp.py  memory.py  runs.py
agent-daemon/theourgia_agent/core/: __init__.py  config.py  cost_cap.py  crypto.py  db.py
agent-daemon/theourgia_agent/mcp/: __init__.py  capabilities.py  dispatch.py  filters.py  gating.py  protocol.py  sessions.py  vault_client.py
agent-daemon/theourgia_agent/models/: __init__.py  agent_install.py  audit.py  base.py  run.py
agent-daemon/theourgia_agent/runs/: __init__.py  audit.py  cost.py  db_audit_sink.py  launcher.py  persistence.py  repos.py  sandbox.py  subprocess_runner.py
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  babel.cfg  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_extensions_and_identity.py  0002_encryption_tables.py  0003_auth_tables.py  0004_plugin_tables.py  0005_backup_run.py  0006_webauthn_credential.py  0007_email_log.py  0008_outbox_event.py  0009_notifications.py  0010_upload.py  0011_user_setting.py  0012_instance_setting.py  0013_persona.py  0014_entry.py  0015_book.py  0016_entity.py  0017_entry_phase04_expansion.py  0018_entry_search.py  0019_entry_template.py  0020_library_phase04_expansion.py  0021_body_audio.py  0022_entity_phase05_expansion.py  0023_offerings.py  0024_relational_ledger.py  0025_tarot.py  0026_iching.py  0027_geomancy.py  0028_runes.py  0029_divination_lite.py  0030_practice_logs.py  0031_resh_today.py  0032_practices.py  0033_workshop_sigils_magic_squares.py  0034_workshop_talismans.py  0035_workshop_circles.py  0036_workshop_tools_altars.py  0037_workshop_voces.py  0038_phase08_ciphers.py  0039_phase08_gematria_index.py  0040_phase08_studies.py  (+43 more)
backend/locales/en/LC_MESSAGES/: messages.po
backend/tests/: conftest.py  mbf_fixtures.py  test_activitypub_actor.py  test_activitypub_models.py  test_activitypub_router.py  test_admin_health.py  test_agents_daemon_client.py  test_altars.py  test_analytics_aggregates.py  test_api_agents.py  test_api_app.py  test_api_astro.py  test_api_auth.py  test_api_deps.py  test_api_entries.py  test_api_errors.py  test_api_library.py  test_api_totp.py  test_api_user_settings.py  test_api_webauthn.py  test_astro.py  test_astro_time.py  test_auth_lockout.py  test_auth_passwords.py  test_auth_required_endpoints.py  test_auth_tokens.py  test_auth_totp.py  test_authz_audit.py  test_authz_authorize.py  test_authz_checks.py  test_authz_decisions.py  test_authz_policies.py  test_authz_policy.py  test_authz_resource.py  test_authz_rls.py  test_authz_scopes.py  test_authz_visibility.py  test_backup_pipeline_v1.py  test_backups_policy.py  test_backups_restic.py  (+190 more)
backend/theourgia/: __about__.py  __init__.py  __main__.py
backend/theourgia/api/: __init__.py  app.py  deps.py  errors.py  lifespan.py  middleware.py  schemas.py
backend/theourgia/core/: __init__.py  config.py  db.py  ids.py  memorial.py  pdf_watermark.py  private_viewer_credentials.py  timeutil.py  traditions.py
backend/theourgia/models/: __init__.py  activitypub.py  agents.py  attestations.py  audio.py  audit.py  auth.py  backups.py  base.py  body.py  bundles.py  ciphers.py  circles.py  comment.py  contracts.py  crypto.py  digest.py  divination_lite.py  email.py  entities.py  entries.py  events.py  federation_activity.py  federation_delivery.py  federation_nonce.py  federation_peer.py  gematria_index.py  geomancy.py  group_ritual.py  hub_aggregate.py  hub_capability.py  ical_feed.py  iching.py  identity.py  initiations.py  instancesettings.py  library.py  magic_squares.py  media.py  media_upload_session.py  (+36 more)
backend/theourgia/scripts/: __init__.py  reaper.py  verify_zero_telemetry.py
plugins/theourgia-plugin-example-cipher/: README.md  plugin.toml  pyproject.toml
registry/: Dockerfile  README.md  alembic.ini  pyproject.toml
registry/alembic/: env.py
registry/alembic/versions/: 0001_initial_schema.py  0002_release_artifact.py
registry/tests/: test_artifacts.py  test_did_auth.py  test_schemas.py  test_sso_session.py
registry/theourgia_registry/: __about__.py  __init__.py
registry/theourgia_registry/api/: __init__.py  app.py  deps.py
registry/theourgia_registry/core/: __init__.py  config.py  db.py  did_auth.py  sso.py
registry/theourgia_registry/models/: __init__.py  advisory.py  artifact.py  author.py  base.py  maintainer.py  plugin.py
(+1843 files in other folders)
