# Theourgia backend package (Python / FastAPI)

[project]
name = "theourgia"
version = "0.0.0-dev"
description = "Theourgia backend — FastAPI application, federation engine, plugin host"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-only" }
authors = [
    { name = "Soror Ευ. Α." },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Religion",
    "Framework :: FastAPI",
    "Typing :: Typed",
]

# Runtime dependencies will be added as phases land. Listed here for shape;
# none are imported yet (Phase 00 is foundations only).
dependencies = [
    # Web framework
    "fastapi >=0.115,<1.0",
    "uvicorn[standard] >=0.32,<1.0",
    "httpx >=0.28,<1.0",

    # Data layer
    "sqlmodel >=0.0.22,<1.0",
    "alembic >=1.14,<2.0",
    "asyncpg >=0.30,<1.0",
    "psycopg[binary] >=3.2,<4.0",
    "pgvector >=0.3,<1.0",
    "redis >=5.2,<6.0",

    # Background jobs
    "celery[redis] >=5.4,<6.0",

    # Crypto
    "cryptography >=48.0.1,<49.0",
    "pyopenssl >=26.0.0",
    "pynacl >=1.5,<2.0",
    "argon2-cffi >=23.1,<25.0",
    "pyjwt[crypto] >=2.10,<3.0",
    "webauthn >=2.5,<3.0",

    # Astrology (Phase 03)
    "pyswisseph >=2.10,<3.0",

    # Validation
    "pydantic >=2.10,<3.0",
    "pydantic-settings >=2.7,<3.0",
    "email-validator >=2.2,<3.0",

    # Misc
    "python-multipart >=0.0.19,<1.0",
    "orjson >=3.10,<4.0",
    "structlog >=24.1,<27.0",
    "prometheus-client >=0.21,<1.0",
    "babel >=2.13,<3.0",

    # PDF processing (Phase 10 watermark — b108-2hb)
    "pypdf >=6.13.3,<7.0",
    "reportlab >=4.2,<5.0",
]

[project.optional-dependencies]
# AI agent integration (Phase 16) — opt-in
ai = [
    "anthropic >=0.42,<1.0",
    "mcp >=1.28.1,<2.0",
]

# Email backends (Phase 10) — choose one
email-postmark = ["postmarker >=1.0,<2.0"]
email-resend = ["resend >=2.5,<3.0"]
email-mailgun = ["requests>=2.34.2,<3.0"]
# (SMTP is built into the stdlib)

# Crash reporting — opt-in. Theourgia ships with zero telemetry by default.
sentry = ["sentry-sdk[fastapi,celery] >=2.20,<3.0"]

# S3-compatible storage — install when THEOURGIA_STORAGE_BACKEND=s3.
storage-s3 = ["boto3 >=1.35,<2.0"]

# Local Whisper transcription — install when
# THEOURGIA_TRANSCRIPTION_ENABLED=true. Fully local; never a cloud API.
transcription = ["faster-whisper >=1.0,<2.0"]

[dependency-groups]
dev = [
    # Test framework
    "pytest >=8.3,<9.0",
    "pytest-asyncio >=0.25,<1.0",
    "pytest-cov >=6.0,<7.0",
    "pytest-mock >=3.14,<4.0",
    "anyio >=4.7,<5.0",
    "hypothesis >=6.122,<7.0",

    # HTTP testing
    "httpx >=0.28,<1.0",

    # Type checking
    "mypy >=1.13,<2.0",
    "types-redis >=4.6,<5.0",

    # Linting / formatting (also configured in repo root)
    "ruff >=0.8,<1.0",

    # Security
    "pip-audit >=2.7,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["theourgia"]

[tool.hatch.metadata]
allow-direct-references = false
