# Theourgia plugin registry (Python / FastAPI)
#
# Hosts the author/reviewer/public side of plugins.theourgia.com.
# Distinct from the main backend/ app — the main app is the vault
# host; this is the registry host. They share crypto primitives
# (Ed25519 + RFC 9421 + DID format) but otherwise live independently.

[project]
name = "theourgia-registry"
version = "0.0.0-dev"
description = "Theourgia plugin registry — author/reviewer/public side of plugins.theourgia.com"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Soror Ευ. Α." }]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
dependencies = [
    "fastapi >=0.115,<1.0",
    "uvicorn[standard] >=0.32,<1.0",
    "sqlmodel >=0.0.22,<1.0",
    "alembic >=1.14,<2.0",
    "asyncpg >=0.30,<1.0",
    "psycopg[binary] >=3.2,<4.0",
    "pydantic >=2.10,<3.0",
    "pydantic-settings >=2.6,<3.0",
    "cryptography >=44.0,<45.0",
    # SSO bridge — fetching the trusted vault's well-known actor doc.
    "httpx >=0.28,<1.0",
]

[project.optional-dependencies]
test = [
    "pytest >=8.3,<9.0",
    "pytest-asyncio >=0.24,<1.0",
    "httpx >=0.28,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["theourgia_registry"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I", "UP", "B", "SIM", "RUF"]
